<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/first_Name"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleRegis"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/titleRegis"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="184dp"
        android:text="@string/registration"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/last_Name"
        android:layout_width="170dp"
        android:layout_height="64dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/Email"
        app:layout_constraintStart_toEndOf="@+id/first_Name"
        app:layout_constraintTop_toBottomOf="@+id/titleRegis"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/create_a_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/dropDownMenu"
        android:layout_width="195dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="108dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropDownMenu" /><![CDATA[



    />









    ]]>

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_horizontal"
        android:text="@string/existing_user_log_in"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/screenshot_2024_02_09_at_12_40_19_pm"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>